# pdf_job_parser_backend

./: .env  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/v1/: routes.py
app/core/: config.py
app/schemas/: job.py
app/services/: pdf_parser.py
