[project]
name = "pdf-job-parser-backend"
version = "0.1.0"
description = "FastAPI service to parse job data from PDFs"
authors = [
    {name = "Your Name"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "pymupdf (>=1.26.3,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "requests (>=2.32.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "app"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"
pytest-asyncio = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
